[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/Options.gd" type="Script" id=1]
[ext_resource path="res://ui/fonts/title_font.tres" type="DynamicFont" id=5]
[ext_resource path="res://ui/theme.tres" type="Theme" id=6]

[node name="Options" type="Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
popup_exclusive = true
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
theme = ExtResource( 6 )

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
margin_left = 632.0
margin_top = 352.0
margin_right = 648.0
margin_bottom = 368.0
theme = ExtResource( 6 )

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 424.0
margin_bottom = 320.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 400.0
margin_bottom = 296.0
rect_min_size = Vector2( 384, 0 )
custom_constants/separation = 16

[node name="TitleLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 384.0
margin_bottom = 64.0
theme = ExtResource( 6 )
custom_fonts/font = ExtResource( 5 )
text = "Options"
align = 1

[node name="GridContainer" type="GridContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 80.0
margin_right = 384.0
margin_bottom = 230.0
custom_constants/hseparation = 8
columns = 2

[node name="CameraSpeedLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
margin_top = 8.0
margin_right = 150.0
margin_bottom = 26.0
theme = ExtResource( 6 )
text = "Camera Speed"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CameraSpeedSlider" type="HSlider" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
margin_left = 158.0
margin_right = 384.0
margin_bottom = 34.0
rect_min_size = Vector2( 0, 34 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 6 )
min_value = 1.0
max_value = 20.0
value = 10.0

[node name="SoundLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
margin_top = 46.0
margin_right = 150.0
margin_bottom = 64.0
theme = ExtResource( 6 )
text = "Sound Volume"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundVolumeSlider" type="HSlider" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
margin_left = 158.0
margin_top = 38.0
margin_right = 384.0
margin_bottom = 72.0
rect_min_size = Vector2( 0, 34 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 6 )
max_value = 10.0
value = 5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicVolumeLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
margin_top = 85.0
margin_right = 150.0
margin_bottom = 103.0
theme = ExtResource( 6 )
text = "Music Volume"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicVolumeSlider" type="HSlider" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
margin_left = 158.0
margin_top = 76.0
margin_right = 384.0
margin_bottom = 112.0
rect_min_size = Vector2( 0, 36 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 6 )
max_value = 10.0
value = 5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FullscreenLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
margin_top = 124.0
margin_right = 150.0
margin_bottom = 142.0
theme = ExtResource( 6 )
text = "Fullscreen"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FullscreenCheckBox" type="CheckBox" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
margin_left = 158.0
margin_top = 116.0
margin_right = 190.0
margin_bottom = 150.0
rect_min_size = Vector2( 0, 34 )
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_left = 159.0
margin_top = 246.0
margin_right = 225.0
margin_bottom = 280.0
grow_horizontal = 2
size_flags_horizontal = 4
theme = ExtResource( 6 )
text = "Back"

[connection signal="visibility_changed" from="." to="." method="_on_Options_visibility_changed"]
[connection signal="value_changed" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer/CameraSpeedSlider" to="." method="_on_CameraSpeed_value_changed"]
[connection signal="value_changed" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer/SoundVolumeSlider" to="." method="_on_SFXVolume_value_changed"]
[connection signal="value_changed" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer/MusicVolumeSlider" to="." method="_on_GameVolume_value_changed"]
[connection signal="toggled" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer/FullscreenCheckBox" to="." method="_on_Fullscreen_toggled"]
[connection signal="pressed" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/BackButton" to="." method="_on_ReturnToGame_pressed"]
